--- a/agendamentos-jacto/Views/Agenda/Index.cshtml
+++ b/agendamentos-jacto/Views/Agenda/Index.cshtml
@@ -3,6 +3,15 @@
 @{
     ViewData["Title"] = "Index";
 }
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+  </div>
+</nav>
+
 
 <h1></h1>
 
